# music-checker

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
old/: Cargo.toml
old/src/: musicbrainz.rs
src/: database.rs  lib.rs  main.rs  musicbrainz.rs
